many design features.

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,17 @@
 <html>
 <head>
+    <script>
+        window.embeddedBlocksConfig = [
+            {
+                rootElementId: "some1",
+                assetsRootUrl: 'http://localhost:8000/assets',
+                stylePaths: ["css/mainb43e388daa27fa1901e8.css","css/fonts.css"],
+                jsPaths: ["js/main_5fd85d1fe451282ef7e1.min.js"]
+            }
+        ]
+    </script>
 </head>
 <body>
+<div id="some1"></div>
 </body>
 </html>
